fix(LottoService): add range value check about winningNumbers input
add validation